--- a/requirements.txt
+++ b/requirements.txt
@@ -70,7 +70,7 @@ requests==2.32.3
 rich==13.7.1
 rpds-py==0.10.6
 safetensors==0.4.5
-setuptools==75.1.0
+setuptools
 shellingham==1.5.0
 six==1.16.0
 smart-open==5.2.1
@@ -87,9 +87,9 @@ thinc==8.2.2
 tokenizers==0.20.1
 toml==0.10.2
 toolz==0.12.0
-torch==2.5.1
-torchaudio==2.5.1
-torchvision==0.20.1
+torch
+torchaudio
+torchvision
 tornado==6.4.1
 tqdm==4.66.5
 transformers==4.45.2
