--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿aiohappyeyeballs==2.4.0
+aiohappyeyeballs==2.4.0
 aiohttp==3.10.5
 aiosignal==1.2.0
 altair==5.0.1
@@ -39,7 +39,7 @@ MarkupSafe==2.1.3
 mdurl==0.1.0
 mkl_fft==1.3.11
 mkl_random==1.2.8
-mkl-service
+mkl-service==2.4.0
 mpmath==1.3.0
 multidict==6.1.0
 multiprocess==0.70.15
@@ -71,7 +71,7 @@ requests==2.32.3
 rich==13.7.1
 rpds-py==0.10.6
 safetensors==0.4.5
-setuptools
+setuptools==75.1.0
 shellingham==1.5.0
 six==1.16.0
 smart-open==5.2.1
@@ -87,9 +87,9 @@ thinc==8.2.2
 tokenizers==0.20.1
 toml==0.10.2
 toolz==0.12.0
-torch
-torchaudio
-torchvision
+torch==2.5.1
+torchaudio==2.5.1
+torchvision==0.20.1
 tornado==6.4.1
 tqdm==4.66.5
 transformers==4.45.2
