--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+accelerate==1.1.1
 aiohappyeyeballs==2.4.0
 aiohttp==3.10.5
 aiosignal==1.2.0
@@ -28,6 +29,7 @@ frozenlist==1.5.0
 fsspec==2024.3.1
 gitdb==4.0.7
 GitPython==3.1.43
+groq
 huggingface_hub==0.24.6
 idna==3.7
 Jinja2==3.1.4
@@ -50,6 +52,7 @@ pillow==10.4.0
 pip==24.2
 preshed==3.0.9
 protobuf==4.25.3
+psutil==5.9.0
 pyarrow==16.1.0
 pycparser==2.21
 pydantic==2.8.2
